Fix main alignment

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -3,5 +3,6 @@
 
   @include screen-above(tablet) {
     width: 200px;
+    margin-right: 40px;
   }
 }
